<resources>
    <string name="app_name">RU Pizza</string>
    <string name="back_button">Back button for page</string>
    <string name="store_orders_title">Store Orders</string>
    <string name="order_total">Order Total</string>
    <string name="cancel_order">Cancel Order</string>
    <string name="pizza_size_and_type">Pizza Size and Type</string>
    <string name="toppings">Toppings</string>
    <string name="sauce">Sauce</string>
    <string name="extra_cheese">Extra Cheese?</string>
    <string name="price_0_00">Price: $0.00</string>
    <string name="current_order">Current Order</string>
    <string name="order_1">Order #1</string>
    <string name="subtotal_0_00">Subtotal: $0.00</string>
    <string name="sales_tax_0_00">Sales Tax: $0.00</string>
    <string name="order_total_0_00">Order Total: $0.00</string>
    <string name="remove_pizza">Remove Pizza</string>
    <string name="place_order">Place Order</string>
    <string name="view_store_orders">View Store Orders</string>
    <string name="specialty_pizza">Specialty Pizza</string>
    <string name="build_your_own_pizza">Build Your Own Pizza</string>
    <string name="specialty_pizza_title">Specialty Pizza</string>
    <string name="size">Size</string>
    <string name="small">Small</string>
    <string name="medium">Medium</string>
    <string name="large">Large</string>
    <string name="extras">Extras</string>
    <string name="extra_sauce">Extra Sauce</string>
    <string name="extra_cheese_option">Extra Cheese</string>
    <string name="quantity">Quantity</string>
    <string name="add_to_order">Add to Order</string>
    <string name="order">Order #</string>
    <string name="pizza_name">Pizza Name</string>
    <string name="toppings_and_sauce">Toppings and Sauce</string>
    <string name="build_your_own_pizza_title">Build Your Own Pizza</string>
    <string name="tomato">Tomato</string>
    <string name="alfredo">Alfredo</string>
    <string name="toppings_list">Toppings</string>
    <string name="price">Price $</string>
    <string name="_0_00">0.00</string>
    <string name="add_to_order_btn">Add to Order</string>
    <string name="picture_of_pizza_type">Picture of pizza type</string>
    <string name="byo_price">Price:</string>
    <string name="byo_add_to_order">Add to Order</string>
    <string name="default_price">0.00</string>
</resources>