<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:id="@+id/currentOrderRelativeLayout">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/sizeTypeTextView"
            android:text="@string/pizza_size_and_type"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            android:fontFamily="sans-serif-medium"
            android:layout_marginTop="4dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#B3B3B3"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/toppingsTextView"
            android:text="@string/toppings"
            android:textColor="#424242"
            android:layout_marginBottom="4dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/sauceTextView"
            android:text="@string/sauce"
            android:textColor="#424242"
            android:layout_marginBottom="4dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/extraCheeseTextView"
            android:text="@string/extra_cheese"
            android:textColor="#424242"
            android:layout_marginBottom="4dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/priceTextView"
            android:text="@string/price_0_00"
            android:textColor="#424242"
            android:layout_marginTop="8dp"
            android:textStyle="italic"/>

    </LinearLayout>
</RelativeLayout>
