<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/specialty_pizza_title"
            android:textSize="30sp"
            android:textColor="#333333"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="16dp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:background="@color/white"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <LinearLayout
            android:id="@+id/optionsLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recyclerView" >

            <!-- RadioGroup with RadioButtons -->
            <RadioGroup
                android:id="@+id/sizeRadioGroup"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="8dp"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/sizeTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/size"
                    android:textSize="18sp"/>

                <RadioButton
                    android:id="@+id/sizeSmallButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/small" />

                <RadioButton
                    android:id="@+id/sizeMedButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/medium" />

                <RadioButton
                    android:id="@+id/sizeLargeButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/large" />
            </RadioGroup>

            <!-- Switches -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/extras"
                    android:textSize="18sp"/>

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/extraSauceSwitch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/extra_sauce" />

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/extraCheeseSwitch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/extra_cheese_option" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/quantityLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/optionsLayout" >

            <TextView
                android:id="@+id/quantityTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quantity"
                android:textSize="18sp"
                android:layout_weight="0.25"/>

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.75"
                android:textSize="16sp"
                android:gravity="center"
                android:inputType="number"
                android:id="@+id/quantityInput"/>

        </LinearLayout>

        <TextView
            android:id="@+id/priceTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/price_0_00"
            android:textSize="24sp"
            android:textColor="#333333"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/quantityLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <Button
            android:id="@+id/addToOrderButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_to_order"
            android:textSize="18sp"
            android:textColor="#ffffff"
            android:background="#3498db"
            android:padding="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/priceTextView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>
