<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ByoPizzaFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="292dp"
            android:layout_height="46dp"
            android:layout_marginTop="16dp"
            android:text="@string/build_your_own_pizza_title"
            android:textColor="#333333"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="224dp"
            android:layout_height="217dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="9dp"
            android:layout_marginEnd="12dp"
            android:src="@drawable/byo_pizza"
            app:layout_constraintEnd_toStartOf="@+id/alfredoRadioButton"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="44dp"
            android:layout_height="22dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="9dp"
            android:layout_marginEnd="115dp"
            android:text="@string/size"
            android:textAlignment="center"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/sizeSpinner"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageView2"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <Spinner
            android:id="@+id/sizeSpinner"
            android:layout_width="134dp"
            android:layout_height="34dp"
            android:layout_marginStart="12dp"
            app:layout_constraintBottom_toTopOf="@+id/textView5"
            app:layout_constraintStart_toEndOf="@+id/imageView2"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="63dp"
            android:layout_height="24dp"
            android:layout_marginStart="12dp"
            android:text="@string/sauce"
            android:textAlignment="center"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@+id/imageView2"
            app:layout_constraintTop_toBottomOf="@+id/sizeSpinner" />

        <RadioGroup
            android:id="@+id/sauceRadioGroup"
            android:layout_width="126dp"
            android:layout_height="60dp"
            android:layout_marginStart="12dp"
            app:layout_constraintStart_toEndOf="@+id/imageView2"
            app:layout_constraintTop_toBottomOf="@+id/textView5">

            <RadioButton
                android:id="@+id/tomatoRadioButton"
                android:layout_width="112dp"
                android:layout_height="29dp"
                android:text="@string/tomato"
                android:textSize="14sp" />

            <RadioButton
                android:id="@+id/alfredoRadioButton"
                android:layout_width="114dp"
                android:layout_height="29dp"
                android:layout_marginBottom="18dp"
                android:text="@string/alfredo" />
        </RadioGroup>

        <TextView
            android:id="@+id/textView6"
            android:layout_width="91dp"
            android:layout_height="28dp"
            android:layout_marginStart="26dp"
            android:layout_marginTop="12dp"
            android:text="@string/toppings_list"
            android:layout_marginEnd="294dp"
            android:textAlignment="center"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2" />

        <ListView
            android:id="@+id/toppingsListView"
            android:layout_width="363dp"
            android:layout_height="219dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="32dp"
            app:layout_constraintBottom_toTopOf="@+id/textView7"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.428"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView6"
            app:layout_constraintVertical_bias="0.29" />

        <Button
            android:id="@+id/addToOrderButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="49dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="12dp"
            android:text="@string/byo_add_to_order"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/priceTextView" />

        <TextView
            android:id="@+id/priceTextView"
            android:layout_width="96dp"
            android:layout_height="27dp"
            android:layout_marginBottom="20dp"
            android:text="@string/default_price"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView7" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="91dp"
            android:layout_height="28dp"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="20dp"
            android:text="@string/byo_price"
            android:textAlignment="textEnd"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <LinearLayout
            android:layout_width="142dp"
            android:layout_height="66dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="7dp"
            android:layout_marginEnd="17dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageView2"
            app:layout_constraintTop_toBottomOf="@+id/sauceRadioGroup">

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/byoExtraSauce"
                android:layout_width="match_parent"
                android:layout_height="27dp"
                android:text="@string/extra_sauce" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/byoExtraCheese"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/extra_cheese_option" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>